<resources>
    <string name="app_name">DairaApp</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="cnic">CNIC</string>
    <string name="name">Name</string>
    <string name="contact">Contact</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="events">Events</string>
    <string name="mentors">Mentors</string>
    <string name="registeration">Registeration</string>
    <string name="view_all">View ALL</string>
    <string name="add">Add</string>
    <string name="show_all">Show ALL</string>
    <string name="add_new">Add New</string>
    <string name="event_name">Event Name</string>
    <string name="textview">TextView</string>
    <string name="assign">Assign</string>
    <string name="venue">Venue</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="upload">Upload</string>
    <string name="todo">TODO</string>
    <string name="message">Message</string>
    <string name="sdksdk">Email</string>
    <string name="alsasjkas">Password</string>
    <string name="askasn">Login</string>
    <string name="admin_portal">Admin Portal</string>
    <string name="wewe">Contact</string>
    <string name="wewew">Cnic</string>
    <string name="etett">Name</string>
    <string name="rttyth">Register</string>
    <string name="tytyty">TODO</string>
    <string name="mentor_portal">Mentor Portal</string>
    <string name="log_out">Log Out</string>
    <string name="add_event">Add Event</string>
    <string name="event">Event</string>
    <string name="sdkddf">Log Out</string>
    <string name="enter_event_name">Enter Event Name</string>
    <string name="weerner">Event Name</string>
    <string name="snksd">Register</string>
    <string name="anssjd">Assign</string>
    <string name="select_event">Select Event</string>
    <string name="select_oc">Select OC</string>
    <string name="participant_name">Participant Name</string>
    <string name="sdnkdjn">Log Out</string>
    <string name="dnkdfnd">Assign</string>
    <string name="SKNDSDJN">Select OC</string>
    <string name="sdsds">TODO</string>
    <string name="sdsknd">TODO</string>
</resources>