<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminEventAddNewFragment">


    <EditText
        android:id="@+id/edittextadmineventaddnew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/event"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.483"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textViewadmineventaddnew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weerner"
        android:textColor="#0E0E0E"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.396" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="279dp"
        android:layout_height="66dp"
        android:layout_gravity="center"
        android:layout_marginStart="57dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="57dp"
        android:elegantTextHeight="false"
        android:fontFamily="sans-serif-black"
        android:gravity="center_horizontal"
        android:text="@string/add_event"
        android:textColor="#FF5722"
        android:textSize="48sp"
        android:textStyle="bold"
        app:flow_verticalAlign="baseline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonadmineventaddnew"
        android:layout_width="183dp"
        android:layout_height="84dp"
        android:background="@drawable/border"
        android:onClick="ADDEventAdminEventClickListner"
        android:text="@string/add"
        android:textColor="#F4F2F1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.667"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>